syntax = "proto3";
option java_multiple_files = true;
package tech.lmru.auth.grpc.service.generated.impl;

message Empty {
}

message Permission {
    int32 id = 1;
    string code = 2;
    string name = 3;
}

message Role {
    int32 id = 1;
    string code = 2;
    string name = 3;
    repeated Permission permissions = 4;
}

message User {
    int32 id = 1;
    string code = 2;
    string name = 3;
    string password = 4;
    repeated Role roles = 5;
}

message EntityIdRequest {
    string id = 1;
}

message PermissionAllResponse {
    repeated Permission permissions = 1;
}

message RoleAllResponse {
    repeated Role roles = 1;
}

message UserAllResponse {
    repeated User users = 1;
}

message EntityDeleteResponse {
    bool success = 1;
}

message EntityCreateResponse {
    int32 id = 1;
}

// Permission API

service PermissionService {
    rpc createOrUpdatePermission(Permission) returns (EntityCreateResponse);
    rpc readByIdPermission(EntityIdRequest) returns (Permission);
    rpc readAllPermission(Empty) returns (PermissionAllResponse);
    rpc deleteByIdPermission(EntityIdRequest) returns (EntityDeleteResponse);
}

// Roles API

service RoleService {
    rpc createOrUpdateRole(Role) returns (EntityCreateResponse);
    rpc readByIdRole(EntityIdRequest) returns (Role);
    rpc readAllRole(Empty) returns (RoleAllResponse);
    rpc deleteByIdRole(EntityIdRequest) returns (EntityDeleteResponse);
}

// Users API

service UserService {
    rpc createOrUpdateUser(User) returns (EntityCreateResponse);
    rpc readByIdUser(EntityIdRequest) returns (User);
    rpc readAllUser(Empty) returns (UserAllResponse);
    rpc deleteByIdUser(EntityIdRequest) returns (EntityDeleteResponse);
}